# game_of_life

./: CMakeLists.txt  README.md
include/: Interface.hpp  Matrix.hpp  Tile.hpp
src/: CMakeLists.txt
src/lib/: Interface.cpp  Matrix.cpp  Tile.cpp
tests/: CMakeLists.txt  test_interface.cpp
